--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "repository": "git@github.com:StephenGrider/ReduxSimpleStarter.git",
   "scripts": {
-    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --port 8080 --hot --host 0.0.0.0 --public 192.168.0.5:8080",
     "test": "mocha --compilers js:babel-core/register --require ./test/global.js --recursive ./test",
     "test:watch": "npm run test -- --watch"
   },
